--- a/core/templates/core/my-account.html
+++ b/core/templates/core/my-account.html
@@ -62,19 +62,21 @@
                             </div>
                         </div>
                     </div>
+                    {% if user.is_superuser %}
                     <div class="col-lg-4 col-md-12">
                         <div class="account-box">
                             <div class="service-box">
                                 <div class="service-icon">
-                                    <a href="#"> <i class="fab fa-paypal"></i> </a>
+                                    <a href="{% url 'statusadmin' %}"> <i class="fa fa-lock"></i> </a>
                                 </div>
                                 <div class="service-desc">
-                                    <h4>PayPal</h4>
-                                    <p>Vincula tu Paypal</p>
+                                    <h4>Pedidos</h4>
+                                    <p>Actualiza los pedidos de usuarios</p>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
